fix hame page buttons alignment

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -2,7 +2,6 @@
     display: inline-block;
     padding: 0.75em 2.5em;
     font-size: 1.25vw;
-    // font-weight: bold;
     color: #fff9dc;
     background: linear-gradient(180deg, #ffeab6 6%, #b3822f 60%, #fffaa3 85%, #bf9942 99%);
     border: 4px solid #804000;
@@ -18,13 +17,16 @@
     min-width: 140px;
     width: max-content;
     white-space: nowrap;
-    // text-shadow: 0 2px 8px #ac8424, 0 1px 0 #fff, 0 -1px 3px #ac8424aa;
     box-sizing: border-box;
     user-select: none;
     font-family: 'Stolzl Book', sans-serif;
 
     &_fullWidth {
         width: 100%;
+    }
+
+    &_bold {
+        font-family: 'Stolzl Regular', sans-serif;
     }
 }
 .button:active {
